기기 정보 등록 api 추가
