# functions/app.js
@@ -27,12 +27,15 @@ app.use("/docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 // 📌 라우터 설정
 const authRoutes = require("./routes/auth");
 const postRoutes = require("./routes/post");
+const deviceRoutes = require("./routes/device");
+
+app.use("/device", deviceRoutes);
 app.use("/", postRoutes);
 app.use("/auth", authRoutes);
 
-// const PORT = process.env.PORT || 8080;
+const PORT = process.env.PORT || 8080;
 
-// app.listen(PORT, () => {
-//   console.log(`Server is running on port ${PORT}`);
-// });
+app.listen(PORT, () => {
+  console.log(`Server is running on port ${PORT}`);
+});
 module.exports = app;
